# something-fun

./: pyproject.toml
dev/: DEV_README.md
dev/example_1_app_template/: app.py  ui_fastui.py  ui_streamlit_app.py  ui_telegram_bot.py  ui_typer_cli.py
project_name/: bot.py  lib.py
