[tool.poetry]
name = "something-fun"
version = "0.0.2"
# Template Version: 0.0.2 # update dockerfile and add basic contents
# Add scheduled job example
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0" # ugly because of langchain
# for stability, use frozen-app-name branch
#calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main" }
bot-lib = { git = "https://github.com/calmmage/bot-lib.git", branch = "main" }
#calmmage = { git = "https://github.com/calmmage/calmmage.git", branch = "main" }
pytest = "*"
# logging
loguru = "*"
toml = "*"
streamlit = "^1.34.0"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
tqdm = "*"
# pandas = "2.1.0"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
